Blogs#show :: Fix issue with video player broken style, improve design

--- a/app/assets/stylesheets/base/_base.sass
+++ b/app/assets/stylesheets/base/_base.sass
@@ -24,9 +24,6 @@ a
 .no-margin
   margin: 0 auto
 
-.video-figure
-  margin: 0 auto 3rem auto
-
 .dtable
   display: table
   .dtrow
