--- a/app/assets/stylesheets/modules/blog/_sidebar.sass
+++ b/app/assets/stylesheets/modules/blog/_sidebar.sass
@@ -2,6 +2,8 @@
 // Sidebar [Blog]
 // ==============
 .blog__sidebar
+  &.sticky.is-stuck
+    z-index: 2
   .last-blogs
     &-title
       font-size: map-get($header-sizes, h4)
