--- a/app/assets/stylesheets/pages/_blog.sass
+++ b/app/assets/stylesheets/pages/_blog.sass
@@ -62,6 +62,9 @@
       &:after
         content: ')'
 
+  &__video__figure
+    margin: 0 auto
+
   &__footer
     .blog__upper-footer
       &__item
